--- a/css/style.css
+++ b/css/style.css
@@ -129,9 +129,10 @@ p {
   transform: translate3d(0, 0, 15px);
 }
 #result {
-  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'><rect fill='#d9d9d9' x='0' y='0' width='1' height='0.5'/></svg>") left bottom repeat-x #ffffff;
+  background: #ffffff;
   text-align: right;
   font-size: 46px;
+  border-bottom: 0.5px solid #d9d9d9;
   width: 100%;
   height: 95px;
   margin: 0;
@@ -179,6 +180,7 @@ p {
   width: 100%;
   height: 396px;
   z-index: 3;
+  overflow: hidden;
   -webkit-transform: translate3d(0, -234px, 3px);
   transform: translate3d(0, -234px, 3px);
   -webkit-transition: all 0.4s ease-in-out;
@@ -209,7 +211,7 @@ p {
   margin: 0;
 }
 #list li {
-  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'><rect fill='#d9d9d9' x='0' y='0' width='1' height='0.5'/></svg>") left bottom repeat-x;
+  border-bottom: 0.5px solid #d9d9d9;
   padding: 0;
 }
 #list li button {
@@ -249,7 +251,7 @@ button {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 22px;
   font-weight: 100;
-  border: 1px solid #d9d9d9;
+  border: 0.5px solid #d9d9d9;
   border-right: none;
   border-bottom: none;
   width: 25%;
@@ -344,9 +346,86 @@ button:active {
     transform: translate3d(0, 132px, 3px);
   }
 }
+/* iPhone 6+
+   ---------------------------------- */
+@media (min-height: 640px) {
+  #result {
+    height: 104px;
+    padding-top: 38px;
+  }
+  #equation {
+    height: 65px;
+    padding-top: 17px;
+  }
+  #keypad button,
+  button {
+    height: 75px;
+  }
+  #history {
+    height: 450px;
+    -webkit-transform: translate3d(0, -280px, 3px);
+    transform: translate3d(0, -280px, 3px);
+  }
+  #history .navbar {
+    height: 45px;
+    padding-top: 11px;
+  }
+  #history .navbar span {
+    padding-top: 10px;
+  }
+  #history.active {
+    -webkit-transform: translate3d(0, 190px, 0);
+    transform: translate3d(0, 190px, 0);
+  }
+  #keypad .row1 {
+    bottom: 375px;
+  }
+  #keypad .row2 {
+    bottom: 300px;
+  }
+  #keypad .row3 {
+    bottom: 225px;
+  }
+  #keypad .row4 {
+    bottom: 150px;
+  }
+  #keypad .row5 {
+    bottom: 75px;
+  }
+  #keypad .row6 {
+    bottom: 0;
+  }
+  #keypad #bs {
+    background-position-y: 30px;
+  }
+  #keypad #bs:active {
+    background-position-y: -19px;
+  }
+}
+/* iPhone 6
+   ---------------------------------- */
+@media (min-height: 667px) {
+  #result {
+    height: 121px;
+    padding-top: 45px;
+  }
+  #equation {
+    height: 75px;
+    padding-top: 22px;
+  }
+  #history {
+    height: 450px;
+    -webkit-transform: translate3d(0, -250px, 3px);
+    transform: translate3d(0, -250px, 3px);
+  }
+  #history.active {
+    -webkit-transform: translate3d(0, 217px, 0);
+    transform: translate3d(0, 217px, 0);
+  }
+}
 /* iPhone 4
    ---------------------------------- */
-@media all and (max-height: 480px) {
+@media (max-height: 480px) {
   #result {
     height: 79px;
     padding-top: 26px;
@@ -405,7 +484,7 @@ button:active {
 }
 /* LANDSCAPE
    ---------------------------------- */
-@media all and (max-height: 320px) {
+@media (max-height: 320px) {
   p {
     padding: 14px 36px 0;
   }
