--- a/css/style.less
+++ b/css/style.less
@@ -18,7 +18,7 @@
 @equalsBgColor:         #d9d9d9;
 @equalsTextColor:       #000;
 
-@borderWidth:           0.5px;
+@borderWidth:           1px;//0.5px;
 
 // History
 @historyBgColor:        rgba(250, 250, 250, 0.97);
@@ -26,8 +26,8 @@
 @historyRuleColor:      #ebedeb;
 
 
-/* RESET
-   ---------------------------------- */
+// RESET
+// ----------------------------------
  
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -51,14 +51,19 @@ input, select {vertical-align: middle;}
 button, input, select, textarea {margin: 0;}
 
 
-/* LAYOUT
-   ---------------------------------- */
+// LAYOUT
+// ----------------------------------
 
 * {
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
 	        box-sizing: border-box;
 }
+
+html {
+	height: 100%;
+}
+
 body {
 	color: @displayTextColor;
 	background: @keypadBgColor;
@@ -66,60 +71,72 @@ body {
 	font-size: 20px;
 	font-weight: 100;
 	line-height: 24px;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 }
+
 p {
 	text-align: center;
 	padding: 24px 36px 0;
 }
 
+.calculator,
+.application {
+	height: 100%;
+}
 
-/* DISPLAY
-   ---------------------------------- */
+
+
+// DISPLAY
+// ----------------------------------
 
 .statusbar {
+	position: fixed;
+	top: 0;
+	left: 0;
 	background: @displayThickRuleColor;
 	width: 100%;
 	height: 21px;
-	z-index: 15;
-	-webkit-transform: translate3d(0, 0, 15px);
-	        transform: translate3d(0, 0, 15px);
 }
-#result {
+
+.result {
 	background: @displayBgColor;
 	text-align: right;
 	font-size: 46px; // Must be updated in JS settings as well
 	border-bottom: @borderWidth solid @keypadRuleColor;
 	width: 100%;
-	height: 95px;
+	height: 23%;
 	margin: 0;
-	padding: 34px 12px 0;
-	z-index: 10;
-	-webkit-transform: translate3d(0, 0, 10px);
-	        transform: translate3d(0, 0, 10px);
+	padding: 74px 12px 0;
 }
-#equation {
+
+.equation {
 	color: @equationTextColor;
 	background: @displayBgColor;
 	text-align: right;
-	border-bottom: 6px solid @displayThickRuleColor;
 	width: 100%;
-	height: 56px;
+	height: 9%;
 	margin-bottom: 0;
 	padding: 13px 12px 0;
 	white-space: nowrap;
 	overflow: hidden;
-	z-index: 5;
-	-webkit-transform: translate3d(0, 0, 5px);
-	        transform: translate3d(0, 0, 5px);
-	#eq {
+	
+	.eq {
 		display: inline;
+		
 		span {
 			color: @equationOperatorColor;
 			font-weight: 300;
 			margin: 0 5px;
-			&.left-bracket {margin-left: 0;}
-			&.right-bracket {margin-right: 0;}
+			
+			&.left-bracket {
+				margin-left: 0;
+			}
+			
+			&.right-bracket {
+				margin-right: 0;
+			}
 		}
 	}
 }
@@ -129,78 +146,21 @@ p {
    ---------------------------------- */
 
 #history {
-	color: @keypadTextColor;
-	background: @historyBgColor;
-	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	position: absolute;
-	width: 100%;
-	height: 396px;
-	z-index: 3;
-	overflow: hidden;
-	-webkit-transform: translate3d(0, -234px, 3px);
-	        transform: translate3d(0, -234px, 3px);
-	-webkit-transition: all .4s ease-in-out;
-	        transition: all .4s ease-in-out;
-	.navbar {
-		background: @historyNavBgColor;
-		text-align: center;
-		height: 46px;
-		padding: 11px 12px 0;
-		span {
-			position: absolute;
-			top: 0;
-			right: 0;
-			text-align: right;
-			width: 48px;
-			height: 46px;
-			padding: 9px 12px 0;
-		}
-	}
-	&.active {
-		-webkit-transform: translate3d(0, 172px, 3px);
-		        transform: translate3d(0, 172px, 3px);
-	}
-}
-#list {
-	list-style: none;
-	width: 100%;
-	margin: 0;
-	li {
-		border-bottom: @borderWidth solid @keypadRuleColor;
-		padding: 0;
-		button {
-			position: static;
-			text-align: left;
-			line-height: 20px;
-			border: none !important;
-			width: 100%;
-			height: 50px;
-			padding: 4px 12px 0;
-			span.equ {
-				float: right;
-				color: @equationOperatorColor;
-				font-size: 13px;
-				line-height: 20px;
-				max-width: 100%;
-				padding: 3px 0 0 5px;
-				white-space: nowrap;
-				text-align: right;
-				text-overflow: ellipsis;
-				overflow: hidden;
-				span {margin: 0 3px;}
-			}
-		}
-		&:first-child {border-top: 1px solid @historyRuleColor;}
-	}
+	display: none;
 }
 
 
-/* KEYPAD
-   ---------------------------------- */
 
-#keypad button,
+// KEYPAD
+// ----------------------------------
+
+.keypad {
+	border-top: 6px solid @displayThickRuleColor;
+	height: 68%;
+}
+
 button {
-	position: absolute;
+	float: left;
 	color: @keypadTextColor;
 	background: none;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -210,72 +170,56 @@ button {
 	border-right: none;
 	border-bottom: none;
 	width: 25%;
-	height: 66px;
+	height: 16.66666666%;
 	margin: 0;
 	padding: 0;
+	
 	&:active {
 		color: @keypadActiveTextColor;
 		background: @keypadActiveBgColor;
 	}
 }
-#keypad {
-	.row1 {bottom: 330px;}
-	.row2 {bottom: 264px;}
-	.row3 {bottom: 198px;}
-	.row4 {bottom: 132px;}
-	.row5 {bottom: 66px;}
-	.row6 {bottom: 0;}
-	.col1 {left: 0;}
-	.col2 {left: 25%;}
-	.col3 {left: 50%;}
-	.col4 {left: 75%;}
-	.row1 {border-top: none;}
-	.col1 {border-left: none;}
-	.equ {
-		color: @equalsTextColor;
-		background: @equalsBgColor;
-		width: 50%;
-	}
-	.plus-minus {letter-spacing: 2px;}
-	#bs {
-		background-image: url(../assets/backspace.png);
-		background-repeat: no-repeat;
-		background-position: center 25px;
-		background-size: 25px 64px;
-		&:active {background-position-y: -24px;}
-	}
-	.btn-history {
-		font-size: 18px;
-		width: 50%;
-		-webkit-transition: all 0.2s ease;
-		        transition: all 0.2s ease;
-	}
-	.flash {
-		color: @keypadActiveTextColor;
-		background: @keypadActiveBgColor;
+
+.btn-equals {
+	color: @equalsTextColor;
+	background: @equalsBgColor;
+	width: 50%;
+}
+
+.btn-plus-minus {
+	letter-spacing: 2px;
+}
+
+.btn-backspace {
+	background-image: url("../assets/backspace.png");
+	background-repeat: no-repeat;
+	background-position: center 25px;
+	background-size: 25px 64px;
+	
+	&:active {
+		background-position-y: -24px;
 	}
 }
+
+.btn-history {
+	font-size: 18px;
+	width: 50%;
+	-webkit-transition: all 0.2s ease;
+	        transition: all 0.2s ease;
+}
+
+.flash {
+	color: @keypadActiveTextColor;
+	background: @keypadActiveBgColor;
+}
+
 
 
 /* In-Call
    ---------------------------------- */
 
 @media (max-height: 528px) and (min-height: 528px) {
-
-	.statusbar {display: none;}
-	#result {
-		height: 76px;
-		padding-top: 25px;
-	}
-	#history {
-		-webkit-transform: translate3d(0, -274px, 3px);
-		        transform: translate3d(0, -274px, 3px);
-	}
-	#history.active {
-		-webkit-transform: translate3d(0, 132px, 3px);
-		        transform: translate3d(0, 132px, 3px);
-	}
-
+	
 }
 
 
@@ -283,42 +227,7 @@ button {
    ---------------------------------- */
 
 @media (min-height: 640px) {
-	#result {
-		height: 104px;
-		padding-top: 38px;
-	}
-	#equation {
-		height: 65px;
-		padding-top: 17px;
-	}
-	#keypad button,
-	button {height: 75px;}
-	#history {
-		height: 450px;
-		-webkit-transform: translate3d(0, -280px, 3px);
-		        transform: translate3d(0, -280px, 3px);
-		.navbar {
-			height: 45px;
-			padding-top: 11px;
-			span {padding-top: 10px;}
-		}
-		&.active {
-			-webkit-transform: translate3d(0, 190px, 0);
-			        transform: translate3d(0, 190px, 0);
-		}
-	}
-	#keypad {
-		.row1 {bottom: 375px;}
-		.row2 {bottom: 300px;}
-		.row3 {bottom: 225px;}
-		.row4 {bottom: 150px;}
-		.row5 {bottom: 75px;}
-		.row6 {bottom: 0;}
-		#bs {
-			background-position-y: 30px;
-			&:active {background-position-y: -19px;}
-		}
-	}
+	
 }
 
 
@@ -326,23 +235,7 @@ button {
    ---------------------------------- */
 
 @media (min-height: 667px) {
-	#result {
-		height: 121px;
-		padding-top: 45px;
-	}
-	#equation {
-		height: 75px;
-		padding-top: 22px;
-	}
-	#history {
-		height: 450px;
-		-webkit-transform: translate3d(0, -250px, 3px);
-		        transform: translate3d(0, -250px, 3px);
-		&.active {
-			-webkit-transform: translate3d(0, 217px, 0);
-			        transform: translate3d(0, 217px, 0);
-		}
-	}
+	
 }
 
 
@@ -350,45 +243,7 @@ button {
    ---------------------------------- */
 
 @media (max-height: 480px) {
-
-	#result {
-		height: 79px;
-		padding-top: 26px;
-	}
-	#equation {
-		height: 50px;
-		padding-top: 10px;
-	}
-	#keypad button,
-	button {height: 55px;}
-	#history {
-		height: 330px;
-		-webkit-transform: translate3d(0, -190px, 3px);
-		        transform: translate3d(0, -190px, 3px);
-		.navbar {
-			height: 42px;
-			padding-top: 9px;
-			span {padding-top: 6px;}
-		}
-		&.active {
-			-webkit-transform: translate3d(0, 150px, 0);
-			        transform: translate3d(0, 150px, 0);
-		}
-	}
-	#list li button {height: 40px;}
-	#keypad {
-		.row1 {bottom: 275px;}
-		.row2 {bottom: 220px;}
-		.row3 {bottom: 165px;}
-		.row4 {bottom: 110px;}
-		.row5 {bottom: 55px;}
-		.row6 {bottom: 0;}
-		#bs {
-			background-position-y: 19px;
-			&:active {background-position-y: -30px;}
-		}
-	}
-
+	
 }
 
 
@@ -396,80 +251,33 @@ button {
    ---------------------------------- */
 
 @media (max-height: 320px) {
-
-	p {padding: 14px 36px 0;}
-	#result {
-		height: 56px;
-		padding-top: 15px;
-	}
-	#equation {
-		height: 40px;
-		padding-top: 5px;
-	}
-	#history {
-		height: 204px;
-		overflow: hidden;
-		-webkit-transform: translate3d(0, -97px, 3px);
-		        transform: translate3d(0, -97px, 3px);
-		.navbar {
-			height: 36px;
-			padding-top: 6px;
-			span {padding-top: 4px;}
-		}
-		&.active {
-			-webkit-transform: translate3d(0, 116px, 0);
-			        transform: translate3d(0, 116px, 0);
-		}
-	}
-	#list li button {height: 33px;}
-	#keypad button,
-	button {
-		border: 1px solid @keypadRuleColor !important;
-		border-right: none !important;
-		border-bottom: none !important;
-		width: 16.9%;
-		height: 51px;
-	}
-	#keypad {
-		.lrow1 {bottom: 153px;}
-		.lrow2 {bottom: 102px;}
-		.lrow3 {bottom: 51px;}
-		.lrow4 {bottom: 0;}
-		.lcol1 {left: 0;}
-		.lcol2 {left: 16.6666%;}
-		.lcol3 {left: 33.3333%;}
-		.lcol4 {left: 50%;}
-		.lcol5 {left: 66.6666%;}
-		.lcol6 {left: 83.3333%;}
-		.lrow1 {border-top: none !important;}
-		.lcol1 {border-left: none !important;}
-		.btn-history,
-		.plus-minus {width: 33.3333%}
-		.equ {width: 16.9%;}
-		#bs {
-			background-position-y: 17px;
-			&:active {background-position-y: -32px;}
-		}
-	}
-
+	
 }
 
 
 /* INSTALL SCREEN
    ---------------------------------- */
 
-#install {display: none;}
+#install {
+	display: none;
+}
+
 body.install {
 	background: #383838;
 	background-attachment: fixed;
 	height: 100%;
-	#calculator {display: none;}
-	#install {
+	
+	.calculator {
+		display: none;
+	}
+	
+	.install {
 		display: block;
 		margin: 0 auto;
 		width: 175px;
 	}
-	#instructions {
+	
+	.instructions {
 		position: absolute;
 		top: 50%;
 		color: #d9d9d9;
@@ -480,20 +288,23 @@ body.install {
 		width: 175px;
 		height: 180px;
 		margin-top: -90px;
+		
 		span {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 			font-size: 16px;
 			font-weight: 800;
 		}
 	}
-	#app-icon {
-		background: url(../assets/app-icon-large.png) no-repeat;
+	
+	.app-icon {
+		background: url("../assets/app-icon-large.png") no-repeat;
 		background-size: 125px 125px;
 		width: 125px;
 		height: 125px;
 		margin: 0 auto 20px;
 	}
-	#twitter {
+	
+	.twitter {
 		position: fixed;
 		bottom: 20px;
 		left: 50%;
@@ -505,6 +316,9 @@ body.install {
 		text-shadow: 0 1px 2px #000;
 		width: 130px;
 		margin-left: -65px;
-		&:hover {color: #d9d9d9;}
+		
+		&:hover {
+			color: #d9d9d9;
+		}
 	}
 }
