--- a/css/style.css
+++ b/css/style.css
@@ -101,30 +101,28 @@ textarea {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-html {
+html,
+body,
+.calculator,
+.application {
   height: 100%;
 }
 body {
-  color: #444444;
-  background: #ebedeb;
+  color: #000;
+  background: #fff;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   font-weight: 100;
   line-height: 24px;
   width: 100%;
-  height: 100%;
   margin: 0;
 }
 p {
   text-align: center;
   padding: 24px 36px 0;
 }
-.calculator,
-.application {
-  height: 100%;
-}
 button {
-  color: #111111;
+  color: #ffffff;
   background: none;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 22px;
@@ -139,32 +137,42 @@ button {
 }
 button:active {
   color: #ffffff;
-  background: #099d93;
+  background-color: #099d93;
+}
+.calculator {
+  position: relative;
 }
 .statusbar {
   position: fixed;
   top: 0;
   left: 0;
-  background: #099d93;
+  background: #262626;
   width: 100%;
   height: 21px;
+  z-index: 100;
 }
 .result {
+  color: #444444;
   background: #ffffff;
   text-align: right;
   font-size: 46px;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 0.5px solid #d9d9d9;
   width: 100%;
   height: 23%;
   margin: 0;
-  padding: 74px 12px 0;
+  padding: 0 12px;
+}
+.result > span {
+  position: relative;
+  top: 50%;
+  right: 12px;
+  margin-right: -12px;
 }
 .equation {
   color: #099d93;
   background: #ffffff;
   text-align: right;
   width: 100%;
-  height: 9%;
   margin-bottom: 0;
   padding: 13px 12px 0;
   white-space: nowrap;
@@ -186,12 +194,25 @@ button:active {
 }
 /* HISTORY
    ---------------------------------- */
+.history {
+  position: absolute;
+  top: 21px;
+  left: 0;
+  background-color: #333333;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  z-index: 90;
+}
 .history-list {
   list-style: none;
 }
 .history-list button {
+  color: #ffffff;
+  background-color: #333333;
   text-align: left;
-  border-top: 1px dashed #d9d9d9;
+  border-top: 0.5px dashed #000000;
   padding: 10px 12px;
 }
 .history-list .equ {
@@ -210,35 +231,67 @@ button:active {
   margin: 0 3px;
 }
 .keypad {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   border-top: 6px solid #099d93;
-  height: 68%;
+  height: 68.4%;
 }
 .keypad button {
   float: left;
-  border-bottom: 1px solid #d9d9d9;
+  border: 0.5px solid #000000;
   width: 25%;
   height: 16.66666666%;
 }
-button.btn-equals {
-  color: #000000;
-  background: #d9d9d9;
+.keypad button.btn-history,
+.keypad button.btn-equals {
   width: 50%;
 }
-button.btn-plus-minus {
-  letter-spacing: 2px;
+.btn-clear {
+  color: #bbbbbb;
+  background-color: #262626;
 }
-button.btn-backspace {
+.btn-history {
+  color: #bbbbbb;
+  background-color: #262626;
+  font-size: 18px;
+}
+.btn-backspace {
+  color: #ffffff;
+  background-color: #262626;
   background-image: url("../assets/backspace.png");
   background-repeat: no-repeat;
   background-position: center 25px;
   background-size: 25px 64px;
 }
-button.btn-backspace:active {
+.btn-backspace:active {
   background-position-y: -24px;
 }
-button.btn-history {
-  font-size: 18px;
-  width: 50%;
+.btn-plus-minus {
+  color: #bbbbbb;
+  background-color: #333333;
+  letter-spacing: 2px;
+}
+.btn-bracket {
+  color: #bbbbbb;
+  background-color: #333333;
+}
+.btn-operator {
+  color: #099d93;
+  background-color: #333333;
+}
+.btn-digit {
+  color: #ffffff;
+  background-color: #333333;
+}
+.btn-decimal {
+  color: #ffffff;
+  background-color: #333333;
+}
+.btn-equals {
+  color: #099d93;
+  background-color: #333333;
 }
 /* In-Call
    ---------------------------------- */
