--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,7 @@ button {
   width: 100%;
   margin: 0;
   padding: 0;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
+  transition: color 0.2s ease, background-color 0.2s ease;
 }
 button:active {
   color: #ffffff;
@@ -141,6 +140,15 @@ button:active {
 }
 .calculator {
   position: relative;
+  background: #fff;
+  overflow: hidden;
+}
+.application {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: top 0.4s ease-in-out;
 }
 .statusbar {
   position: fixed;
@@ -192,28 +200,33 @@ button:active {
 .equation .eq span.right-bracket {
   margin-right: 0;
 }
-/* HISTORY
-   ---------------------------------- */
 .history {
   position: absolute;
-  top: 21px;
+  top: -100%;
   left: 0;
-  background-color: #333333;
+  background-color: #ffffff;
+  border-bottom: 3px solid #d9d9d9;
   width: 100%;
-  height: 100%;
+  height: 68.4%;
+  padding-top: 21px;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   z-index: 90;
+  transition: top 0.4s ease-in-out;
 }
 .history-list {
   list-style: none;
 }
 .history-list button {
-  color: #ffffff;
-  background-color: #333333;
+  color: #444444;
+  background-color: #ffffff;
   text-align: left;
-  border-top: 0.5px dashed #000000;
+  border-top: 0.5px solid #d9d9d9;
   padding: 10px 12px;
+}
+.history-list button:active {
+  color: #ffffff;
+  background-color: #099d93;
 }
 .history-list .equ {
   float: right;
@@ -229,6 +242,12 @@ button:active {
 }
 .history-list .equ span {
   margin: 0 3px;
+}
+.history--open .history {
+  top: 0;
+}
+.history--open .application {
+  top: 68.4%;
 }
 .keypad {
   position: absolute;
@@ -262,11 +281,8 @@ button:active {
   background-color: #262626;
   background-image: url("../assets/backspace.png");
   background-repeat: no-repeat;
-  background-position: center 25px;
-  background-size: 25px 64px;
-}
-.btn-backspace:active {
-  background-position-y: -24px;
+  background-position: center center;
+  background-size: 25px 16px;
 }
 .btn-plus-minus {
   color: #bbbbbb;
@@ -302,8 +318,6 @@ button:active {
 /* iPhone 4
    ---------------------------------- */
 /* LANDSCAPE
-   ---------------------------------- */
-/* INSTALL SCREEN
    ---------------------------------- */
 .installation {
   display: none;
