Added SVG backspace icon
- closes issue #40

--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ button:active {
 .btn-backspace {
   color: #ffffff;
   background-color: #262626;
-  background-image: url("../assets/backspace-icon.png");
+  background-image: url("../assets/backspace-icon.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 25px 16px;
