--- a/css/style.less
+++ b/css/style.less
@@ -331,7 +331,7 @@ button {
 .btn-backspace {
 	color: @backspaceTextColor;
 	background-color: @backspaceBgColor;
-	background-image: url("../assets/backspace-icon.png");
+	background-image: url("../assets/backspace-icon.svg");
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 25px 16px;
